# cortexos

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
app/: __init__.py
app/api/: main.py
app/cli/: main.py
app/core/: config.py  database.py  json_utils.py  logging.py  text_utils.py  time_utils.py
app/demo/: seed.py
app/evals/: harness.py
app/ingestion/: chunking.py  classifier.py  dedup.py
app/mcp/: server.py
app/memory/: service.py
docs/: architecture.md  decisions.md  demo-mode.md  frontend-api-contract.md  frontend-architecture.md  inspection.md  operations-ui.md  product-inspection.md  product-spec.md  release-plan.md  screenshots-guide.md  verification.md
examples/: demo-memories.json
screenshots/: README.md
scripts/: backup.sh  build_ui.sh  demo_mode.sh  generate_intro_cover.py  generate_screenshots.py  generate_social_preview.py  install_systemd.sh  restore.sh  seed_demo.py  setup.sh  smoke_test.sh  start.sh  status.sh  stop.sh  ui_smoke_test.sh
tests/: test_classifier.py  test_dedup_and_conflict.py  test_product_api.py  test_repository_scoped_dedup.py  test_synthesis.py  test_temporal.py
ui/: index.html  package.json  pnpm-lock.yaml  tailwind.config.d.ts  tailwind.config.js  tailwind.config.ts  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
(+38 files in other folders)
