[project]
name = "cortexos"
version = "0.1.0"
description = "Explainable memory operating system for AI agents with temporal reasoning, conflict awareness, and local-first operation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Gabriel Saganski" },
]
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.11.0",
  "httpx>=0.28.0",
  "python-multipart>=0.0.20",
  "qdrant-client>=1.15.0",
  "mcp>=1.12.0",
  "orjson>=3.11.0",
  "python-dateutil>=2.9.0",
  "jinja2>=3.1.0",
]

[project.optional-dependencies]
ml = [
  "FlagEmbedding>=1.3.5",
  "torch>=2.8.0",
  "transformers>=4.55.0,<5.0.0",
]
web = [
  "playwright>=1.55.0",
  "crawl4ai>=0.7.0",
  "docling>=2.47.0",
]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=1.1.0",
  "ruff>=0.12.0",
]

[project.scripts]
cortexos-api = "app.api.main:run"
cortexos-cli = "app.cli.main:main"
cortexos-mcp = "app.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
